-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P1
-
Affects Version/s: 8u20, 9
-
Component/s: hotspot
-
b08
-
Verified
| Issue | Fix Version | Assignee | Priority | Status | Resolution | Resolved In Build |
|---|---|---|---|---|---|---|
| JDK-8045378 | 8u25 | Vladimir Kozlov | P1 | Resolved | Fixed | b01 |
| JDK-8039127 | 8u20 | Vladimir Kozlov | P1 | Closed | Fixed | b09 |
| JDK-8053298 | emb-8u26 | Vladimir Kozlov | P1 | Resolved | Fixed | b17 |
Running java -version or HelloWorld with Windows x86 version of 8u20-b07 crashes in VM_Version::get_processor_features().
00 00e0f894 593d9632 0x2a20202
01 00e0fa08 593da344 jvm!VM_Version::get_processor_features+0x52 [c:\re\workspace\8-2-build-windows-i586-cygwin\jdk8u20\2572\hotspot\src\cpu\x86\vm\vm_version_x86.cpp @ 398]
02 00e0fb08 59313855 jvm!VM_Version::initialize+0x94 [c:\re\workspace\8-2-build-windows-i586-cygwin\jdk8u20\2572\hotspot\src\cpu\x86\vm\vm_version_x86.cpp @ 930]
03 00e0fb30 59337608 jvm!init_globals+0x35 [c:\re\workspace\8-2-build-windows-i586-cygwin\jdk8u20\2572\hotspot\src\share\vm\runtime\init.cpp @ 100]
04 00e0fc28 592a9d01 jvm!Threads::create_vm+0x1b8 [c:\re\workspace\8-2-build-windows-i586-cygwin\jdk8u20\2572\hotspot\src\share\vm\runtime\thread.cpp @ 3424]
05 00e0fc64 00d913c1 jvm!JNI_CreateJavaVM+0x51 [c:\re\workspace\8-2-build-windows-i586-cygwin\jdk8u20\2572\hotspot\src\share\vm\prims\jni.cpp @ 5187]
06 00e0fc8c 00d91e7e java+0x13c1
07 00e0fcd4 00d9ab81 java+0x1e7e
08 00e0fd0c 00d9ac0b java+0xab81
09 00e0fd18 761f495d java+0xac0b
0a 00e0fd24 77e198ee KERNEL32!BaseThreadInitThunk+0xe
Both machines where it has been seen are Sandy Bridge machines running Windows.
ILW HHH = P1
I: High, Crashes
L: High, Crashes every time
W: High, No known workaround at this time
00 00e0f894 593d9632 0x2a20202
01 00e0fa08 593da344 jvm!VM_Version::get_processor_features+0x52 [c:\re\workspace\8-2-build-windows-i586-cygwin\jdk8u20\2572\hotspot\src\cpu\x86\vm\vm_version_x86.cpp @ 398]
02 00e0fb08 59313855 jvm!VM_Version::initialize+0x94 [c:\re\workspace\8-2-build-windows-i586-cygwin\jdk8u20\2572\hotspot\src\cpu\x86\vm\vm_version_x86.cpp @ 930]
03 00e0fb30 59337608 jvm!init_globals+0x35 [c:\re\workspace\8-2-build-windows-i586-cygwin\jdk8u20\2572\hotspot\src\share\vm\runtime\init.cpp @ 100]
04 00e0fc28 592a9d01 jvm!Threads::create_vm+0x1b8 [c:\re\workspace\8-2-build-windows-i586-cygwin\jdk8u20\2572\hotspot\src\share\vm\runtime\thread.cpp @ 3424]
05 00e0fc64 00d913c1 jvm!JNI_CreateJavaVM+0x51 [c:\re\workspace\8-2-build-windows-i586-cygwin\jdk8u20\2572\hotspot\src\share\vm\prims\jni.cpp @ 5187]
06 00e0fc8c 00d91e7e java+0x13c1
07 00e0fcd4 00d9ab81 java+0x1e7e
08 00e0fd0c 00d9ac0b java+0xab81
09 00e0fd18 761f495d java+0xac0b
0a 00e0fd24 77e198ee KERNEL32!BaseThreadInitThunk+0xe
Both machines where it has been seen are Sandy Bridge machines running Windows.
ILW HHH = P1
I: High, Crashes
L: High, Crashes every time
W: High, No known workaround at this time
- backported by
-
JDK-8045378 crash in VM_Version::get_processor_features() on startup
-
- Resolved
-
-
JDK-8053298 crash in VM_Version::get_processor_features() on startup
-
- Resolved
-
-
JDK-8039127 crash in VM_Version::get_processor_features() on startup
-
- Closed
-